--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,10 @@
 	<meta charset="UTF-8">
 	<title>Eternity Hash</title>
 	<link rel="stylesheet" type="text/css" href="./public/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Italianno&display=swap" rel="stylesheet">
 </head>
 <body>
 	<h1>Eternity Hash</h1>
+	<img src="./public/assets/art-cover.jpg" height='700px' width='100%' />
 </body>
 </html>
