--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,10 @@
 	<link href="https://fonts.googleapis.com/css?family=Italianno&display=swap" rel="stylesheet">
 </head>
 <body>
-	<h1>Eternity Hash</h1>
+	<div class='navbar'>
+		<h1>Eternity Hash</h1>
+		<button class='button'>Browse Collection</button>
+	</div>
 	<img src="./public/assets/art-cover.jpg" height='700px' width='100%' />
 </body>
 </html>
