added temporary favicon

--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,20 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Eternity Hash</title>
-	<link rel="stylesheet" type="text/css" href="./public/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Italianno&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="./public/style.css">
+	<link rel="apple-touch-icon" sizes="180x180" href="./public/assets/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="./public/assets/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="./public/assets/favicon-16x16.png">
+	<link rel="manifest" href="./public/assets/site.webmanifest">
 </head>
 <body>
 	<div class='navbar'>
 		<h1>Eternity Hash</h1>
-		<button class='button'>Browse Collection</button>
+		<div class='navbar-right'>
+			<button class='button'>My Account</button>
+			<button class='button'>Browse Collection</button>
+		</div>
 	</div>
 	<img src="./public/assets/art-cover.jpg" height='700px' width='100%' />
 </body>
