added '/authentication' route

--- a/public/authenticate.html
+++ b/public/authenticate.html
@@ -3,12 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Authentication - Eternity Hash</title>
-	<link rel="stylesheet" type="text/css" href="./assets/authenticate.css">
+	<link rel="stylesheet" type="text/css" href="./public/authenticate.css">
 </head>
 <body>
 	<div class="container">
 		<div class="header">
-			<img src="./assets/logo-192.png" width='40px' height='40px'>
+			<img src="./public/assets/logo-192.png" width='40px' height='40px'>
 			<h2>Login</h2>
 		</div>
 		
