linked my account to authentication page

--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
 	<div class='navbar'>
 		<h1>Eternity Hash</h1>
 		<div class='navbar-right'>
-			<button class='button'>My Account</button>
-			<button class='button'>Browse Collection</button>
+				<a href="./authentication">My Account</a>
+				<a href=''> Browse Collection</a>
 		</div>
 	</div>
 	<img src="./public/assets/art-cover.jpg" height='700px' width='100%' />
