--- a/public/authenticate.html
+++ b/public/authenticate.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Authentication - Eternity Hash</title>
 	<link rel="stylesheet" type="text/css" href="./public/authenticate.css">
+	<link href="https://fonts.googleapis.com/css?family=Italianno&display=swap" rel="stylesheet">
 </head>
 <body>
 	<div class="container">
