--- a/public/authenticate.html
+++ b/public/authenticate.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="container">
 		<div class="header">
-			<img src="./public/assets/logo-192.png" width='40px' height='40px'>
+			<img src="./public/images/logo-192.png" width='40px' height='40px'>
 			<h2>Login</h2>
 		</div>
 		
