--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
 	<title>Eternity Hash</title>
 	<link href="https://fonts.googleapis.com/css?family=Italianno&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="./public/index.css">
-	<link rel="apple-touch-icon" sizes="180x180" href="./public/assets/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="./public/assets/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="./public/assets/favicon-16x16.png">
-	<link rel="manifest" href="./public/assets/site.webmanifest">
+	<link rel="apple-touch-icon" sizes="180x180" href="./public/images/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="./public/images/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="./public/images/favicon-16x16.png">
+	<link rel="manifest" href="./public/images/site.webmanifest">
 </head>
 <body>
 	<div class='navbar'>
@@ -18,6 +18,6 @@
 				<a href=''> Browse Collection</a>
 		</div>
 	</div>
-	<img src="./public/assets/art-cover.jpg" height='700px' width='100%' />
+	<img src="./public/images/art-cover.jpg" height='700px' width='100%' />
 </body>
 </html>
