--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 	<div class='navbar'>
 		<h1>Eternity Hash</h1>
 		<div class='navbar-right'>
-				<a href="./authentication">My Account</a>
+				<a href="./authentication/login">My Account</a>
 				<a href=''> Browse Collection</a>
 		</div>
 	</div>
