--- a/public/login.html
+++ b/public/login.html
@@ -3,30 +3,32 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Authentication - Eternity Hash</title>
-	<link rel="stylesheet" type="text/css" href="./public/authenticate.css">
+	<link rel="stylesheet" type="text/css" href="../public/authenticate.css">
 	<link href="https://fonts.googleapis.com/css?family=Italianno&display=swap" rel="stylesheet">
 </head>
 <body>
 	<div class="container">
 		<div class="header">
-			<img src="./public/images/logo-192.png" width='40px' height='40px'>
+			<img src="../public/images/logo-192.png" width='40px' height='40px'>
 			<h2>Login</h2>
 		</div>
 		
-		<form action='submit-method' method='post' name='login-form'>
+		<form action='./authentication/login' method='post' name='login-form'>
 			<div class='input-section'>
 				<label class='input-label'>Username: </label>
+				<br>
 				<input type="text" name="username">
 				<br>
 			</div>
 			<div class='input-section'>
 				<label class='input-label'>Password:</label>
+				<br>
 				<input type="password" name="password">
 				<br>
 			</div>
-			<input class='submit-button' type="submit" name="submit">
+			<input class='submit-button' type="submit">
 		</form>
-		<p>No account? <a href="">Register</a>
+		<p>No account? <a href="./register">Register</a>
 	</div>
 
 </body>
