--- a/public/register.html
+++ b/public/register.html
@@ -13,7 +13,7 @@
 			<h2>Register</h2>
 		</div>
 		
-		<form action='./authentication/login' method='post' name='login-form'>
+		<form action='./authentication/register' method='post' name='login-form'>
 			<div class='input-section'>
 				<label class='input-label long'>Username: </label>
 				<br>
@@ -29,7 +29,7 @@
 			<div class='input-section'>
 				<label class='input-label long'>Verify Password:</label>
 				<br>
-				<input type="password2" name="password2">
+				<input type="password" name="password2">
 				<br>
 			</div>
 			<div class='input-section'>
