--- a/public/login.html
+++ b/public/login.html
@@ -13,7 +13,7 @@
 			<h2>Login</h2>
 		</div>
 		
-		<form action='./authentication/login' method='post' name='login-form'>
+		<form action='./login' method='post' name='login-form'>
 			<div class='input-section'>
 				<label class='input-label'>Username: </label>
 				<br>
