--- a/public/register.html
+++ b/public/register.html
@@ -13,7 +13,7 @@
 			<h2>Register</h2>
 		</div>
 		
-		<form action='./authentication/register' method='post' name='login-form'>
+		<form action='./register' method='post' name='register-form'>
 			<div class='input-section'>
 				<label class='input-label long'>Username: </label>
 				<br>
