implemented database check for user at /authentication/login

--- a/public/login.html
+++ b/public/login.html
@@ -30,6 +30,9 @@
 		</form>
 		<p>No account? <a href="./register">Register</a>
 	</div>
-
+	
+	<script>
+		console.log(res.locals)
+	</script>
 </body>
 </html>
