--- a/public/register.html
+++ b/public/register.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Authentication - Eternity Hash</title>
+	<title>Eternity Hash - Register</title>
 	<link rel="stylesheet" type="text/css" href="../public/authenticate.css">
 	<link href="https://fonts.googleapis.com/css?family=Italianno&display=swap" rel="stylesheet">
+	<link rel="icon" type="image/png" sizes="16x16" href="../public/images/favicon-16x16.png">
 </head>
 <body>
 	<div class="container">
