restyled navbar and peice page

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -8,6 +8,6 @@
     <title>Eternity Hash</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="height: 100%"></div>
   </body>
 </html>
