fixed overflow: scroll in cart section

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -10,6 +10,7 @@
     <title>Eternity Hash</title>
   </head>
   <body>
+    <div id="modal"></div>
     <div id="root" style="height: 100%"></div>
   </body>
 </html>
